[package]
name = "roughage"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "a deadlock-free replacement for buffered streams"
repository = "https://github.com/oconnor663/roughage"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/roughage"
readme = "README.md"
edition = "2024"

[dependencies]
atomic_refcell = "0.1.13"
futures = "0.3.31"
pin-project-lite = "0.2.16"

[dev-dependencies]
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
